2012-07-05	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.2:
		- keep in sync with stable release .22

2012-06-26	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Back to development

2012-06-24	Juergen Beisert <jbe@pengutronix.de>

	* Kernels:
		- release all kernels and mark them accordingly
	* Platform: Release June 2012 (2012.06.0)

2012-06-22	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .36
	* Kernel 3.4:
		- keep in sync with stable release .4

2012-06-20	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.2:
		- keep in sync with stable release .21

2012-06-18	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .35
	* Kernel 3.4:
		- keep in sync with stable release .3

2012-06-11	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.2:
		- keep in sync with stable release .20

2012-06-10	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .34
	* Kernel 3.4:
		- keep in sync with stable release .2

2012-06-04	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .33
	* Kernel 3.3:
		- keep in sync with stable release .8
	* Kernel 3.4:
		- keep in sync with stable release .1
	* Kernel 3.2:
		- keep in sync with stable release .19

2012-05-23	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .32
	* Kernel 3.2:
		- keep in sync with stable release .18
	* Kernel 3.3:
		- keep in sync with stable release .7

2012-05-16	Juergen Beisert <jbe@pengutronix.de>

	* Barebox:
		- back to development
		- add a status line to the built-in editor

2012-05-12	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.2:
		- keep in sync with stable release .17
	* Kernel 3.3:
		- keep in sync with stable release .6

2012-05-08	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- keep in sync with stable release .31
	* Kernel 3.3:
		- keep in sync with stable release .5
